# SEAL

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
seal/: __init__.py  banner.py  cli.py  config.py  engine.py  liveview.py  llm.py  models.py  orchestrator.py  report.py  scanner.py  settings.py
seal/art/: seal.txt
seal/loops/: __init__.py  archive.py  evolution.py  verification.py
tests/: test_e2e.py
