[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seal-redteam"
version = "0.1.0"
description = "SEAL — Security Evolution from Automated Loop: autonomous web red-team that runs strix, verifies findings with an independent LLM judge, and evolves each round."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "SEAL contributors" }]
keywords = ["security", "red-team", "pentest", "llm", "llm-judge", "openrouter", "strix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Core is stdlib-only: the loop engine, `seal demo`, and `seal doctor` install
# and run with ZERO third-party deps. The strix engine is an external tool;
# the LLM judge uses a plain OpenAI-compatible HTTP call (stdlib urllib).
dependencies = []

[project.optional-dependencies]
strix = ["strix-agent"]        # the scanning engine (also needs Docker running)
dev = ["pytest>=8"]

[project.scripts]
seal = "seal.cli:main"

[project.urls]
Homepage = "https://github.com/local/seal"
Upstream = "https://github.com/usestrix/strix"

[tool.hatch.build.targets.wheel]
packages = ["seal"]

[tool.hatch.build.targets.wheel.force-include]
"seal/art/seal.txt" = "seal/art/seal.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
